# moss

./: .gitignore  README.md  config.py  main.py  push  pyproject.toml  run
coach/: turbo.py
data/: dataset.md
data/processor/: BookCorpus.py  CommonCrawl.py  Gutenberg.py  SPGC.py  Smashwords.py  WebText.py  WikipediaDump.py
layer/: activation.py  selfattention.py
model/: constant.py  glm.py
moss/chat/: example.py
moss/config/: ds-train.yaml
moss/inference/: cli.py
moss/layer/: embedding.py  selfattention.py
moss/loader/: model.py
moss/model/: chargpt_turbo.py  config.py  constant.py  glm.py  quantization.py  tokenizer.py  utils.py
moss/trainer/: base.py  ds.py
moss/utils/: conversation.py  generator.py  log.py  singleton.py
